# My-Step-Monitor

./: Buzzer.cpp  Buzzer_wiringPi.cpp  My Step Monitor.sln  README.md  RTEP_Buzzer_class.sln  Report  Threads.h  main.cpp
Dev_Doc/: Buzzer & Screen_20_02  MPU & Pressure_15_02
RETP_LCD_Py/: lcd.py
RTEP_Buzzer_class/: Buzzer.cpp  Buzzer.h  Buzzer_pigpio.cpp  Buzzer_test.cpp  Buzzer_wiringPi.cpp  CMakeLists.txt  RTEP_Buzzer_class.vcxproj
RTEP_Commu/: ADS1115.h  C25A_Commu.cpp  IPC.cpp  IPC.h  IPC_Send.cpp  MPU6050_Commu  MPU6050_Commu.cpp  MPU6050_test_main.cpp
RTEP_Commu/Abandon/: IPC_Receive.cpp
RTEP_I2C_class/: I2C.cpp  I2C.h  RSCG12864B.cpp  RSCG12864B.h
RTEP_Lcd1602/: CMakeLists.txt  LCD.cpp  LCD.h  lcd_test.cpp
RTEP_Lcd_Tests/: Lcd_test1.cpp  Lcd_test2.cpp  lcd_test3.cpp
RTEP_Lcd_class/: Lcd_test1.cpp  Lcd_test2.cpp
RTEP_MPU6050_class/: CMakeLists.txt  MPU6050.h  MPU6050_I2C  MPU6050_I2C.cpp  MPU6050_Pigpio.cpp  Mpu6050.h  Mpu6050_test.cpp  Pigpio.cpp  main.cpp  mpu6050.cpp  mpu_6050.cpp  test.cpp
RTEP_MPU6050_class/Abandon/: 6050.cpp  Piogio.cpp
RTEP_MPU6050_class/Wrapper/: MPU6050.h  MPU6050_Wrapper.cpp  MPU6050_Wrapper.h  MPU6050_main.cpp
RTEP_MainFunc/: Judgement.cpp  Judgment.cpp  Judgment.h  Main.cpp  Response.cpp  Response.h  Self_defined_classes.h  Threads.cpp  Threads.h  Threads_Response.cpp  Threads_read_detect.cpp  Threads_read_detect.h  judgment.cpp  main.cpp  thread_buzzer.h
RTEP_MainFunc/Abandon/: Threads_1.h  Threads_Response.cpp  thread_buzzer.h
RTEP_Pressure_class/: ADS1115.cpp  ADS1115.h  C25A.cpp  C25A_ADS1115_Pressure_test.cpp  C25A_I2C.cpp  C25A_Pigpio.cpp  CMakeLists.txt  Pressure.cpp  adcPressure.cpp
RTEP_Pressure_class/Abandon/: C25A_I2C.cpp  C25A_Pigpio.cpp  Pressure.cpp  adcPressure.cpp
RTEP_Pressure_class/Wrapper/: ADS1115_Wrapper.cpp  ADS1115_Wrapper.h  C25A_Wrapper.cpp
RTEP_Succ/: MPU6050_test.cpp  MPU6050_test.h
test_folder/: ADS1115.cpp  Buzzer.cpp  Buzzer.h  IPC.h  Judgment.cpp  Judgment.h  LCD.cpp  LCD.h  MPU6050_test.cpp  Main.cpp  Response.cpp  Response.h
